retry after removing index.lock

--- a/index.html
+++ b/index.html
@@ -4,8 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+    <!-- NAVBAR -->
+        <header>
+        <nav>
+            <div class="logo">CIFOS</div>
+            <ul>
+                <li><a href="#beranda">Beranda</a></li>
+                <li><a href="#tentang">Tentang</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="#reservasi" class="reservasi">Reservasi</a></li>
+            </ul>
+        </nav>
+    </header>
+
+
+    <!-- HERO SECTION -->
+    <section class="hero">
+    <div class="hero-text">
+            <h1><span>CIFOS</span><br>Ciawi Food Station</h1>
+            <p>Cita Rasa Nusantara, Rasakan Indahnya Pemandangan Dengan Makanan  <br> Yang Lezat. </p>
+        <button>
+            <a href="#menu">Lihat Menu</a>
+        </button>
+    </div>
+    
+    <div class="hero-image">
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5POaDVb2GNClRYNtMFuYem7X7EvrT7RGeTQ&s" alt="Ciawi Food Station" />
+    </div>
+    </section>
 </body>
 </html>
