--- a/index.html
+++ b/index.html
@@ -31,10 +31,72 @@
             <a href="#menu">Lihat Menu</a>
         </button>
     </div>
-    
+
     <div class="hero-image">
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS5POaDVb2GNClRYNtMFuYem7X7EvrT7RGeTQ&s" alt="Ciawi Food Station" />
     </div>
     </section>
+
+
+    <!-- Menu Section -->
+<section class="menu-section" id="menu">
+  <h2>Menu Pilihan</h2>
+  <div class="menu-grid">
+    <!-- Card 1 -->
+    <div class="menu-card">
+      <img src="https://images.unsplash.com/photo-1504674900247-0877df9cc836?auto=format&fit=crop&w=400&q=80" alt="Nasi Goreng">
+      <div class="menu-info">
+        <h3>Nasi Goreng Cifos </h3>
+        <p>Nasi goreng spesial dengan rempah pilihan dan topping ayam.</p>
+        <span class="harga">Rp 37.272</span>
+      </div>
+    </div>
+    <!-- Card 2 -->
+    <div class="menu-card">
+      <img src="https://images.unsplash.com/photo-1519864600265-abb23847ef2c?auto=format&fit=crop&w=400&q=80" alt="Mie Ayam">
+      <div class="menu-info">
+        <h3>Nasi Bakar Oncom</h3>
+        <p>Nasi bakar spesial dengan topping oncom gurih.</p>
+        <span class="harga">Rp 27.272</span>
+      </div>
+    </div>
+    <!-- Card 3 -->
+    <div class="menu-card">
+      <img src="https://images.unsplash.com/photo-1464306076886-debca5e8a6b0?auto=format&fit=crop&w=400&q=80" alt="Sate Ayam">
+      <div class="menu-info">
+        <h3>Paket Ayam Ayam Daun Jeruk</h3>
+        <p> ayam dengan bumbu khas, disajikan dengan daun jeruk dan nasi pana.</p>
+        <span class="harga">Rp 47.820</span>
+      </div>
+    </div>
+    <!-- Card 4 -->
+    <div class="menu-card">
+      <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=400&q=80" alt="Sop Iga">
+      <div class="menu-info">
+        <h3>Sop Iga</h3>
+        <p>Sop iga sapi dengan kuah bening dan sayuran segar.</p>
+        <span class="harga">Rp 52.000</span>
+      </div>
+    </div>
+    <!-- Card 5 -->
+    <div class="menu-card">
+      <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=400&q=80" alt="Sop Iga">
+      <div class="menu-info">
+        <h3>Iga Bakar</h3>
+        <p>Iga bakar sapi pilihan dengan ciri khas bumbu lada hitam.</p>
+        <span class="harga">Rp 57.820</span>
+      </div>
+    </div>  
+    <!-- Card 6 -->
+    <div class="menu-card">
+      <img src="https://images.unsplash.com/photo-1502741338009-cac2772e18bc?auto=format&fit=crop&w=400&q=80" alt="Sop Iga">
+      <div class="menu-info">
+        <h3>Paket Bebek Kecombrang</h3>
+        <p>Bebek pilihan dengan tekstur lembut disajikan bersama dengan kecombrang.</p>
+        <span class="harga">Rp 70.820</span>
+      </div>
+    </div> 
+  </div>
+</section>
 </body>
 </html>
